tests/testfiles/valid/basic/comment.c
int main() {
    // Ce texte est un commentaire
   return 42;
}