tests/testfiles/invalid/basic/invalid_variable_assignment2.c
int main() {
    int d;
    d = texte
    return d;
}